# NLP_in_practice

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: lora_train.ipynb  mergelora.ipynb  mistral_example.ipynb  process_data.ipynb
src/: logger.py  main.py  model.py  prompts.py  propmpts.py
